# demo

./: .gitmodules  Gemfile  README.md  _config.yml  foo.txt  foobarbaz321.txt  index.html  index.md  pyproject.toml  requirements.txt  workflow-c.yml
.github/workflows/: gitkeep.yml  mocking-NICS-workflow.yml  test-accessing-global-env-in-bash-script.yml  test-bring-file-across-branch.yml  test-check-pypi-package.yml  test-compile-py.yml  test-demo-testing.yml  test-fast-pypi-release.yml  test-gh-simple-release.yml  test-ghaction-expression.yml  test-github-context.yml  test-piping-gh-env.yml  test-py-raise-exception.yml  test-run-test-checkauthor.yml  test-running-py-script-from-shell.yml  test-transfer-value-ghaction.yml  test-using-action-var.yml  test-using-gh-action-cache.yml  test.yml  testing.yml  workflow-a.yml  workflow-b.yml
20230724_test_compile_py/: test-compile-py.yml
20230724_test_compile_py/test_app/: main.py
Docs/: Changelog.md
_includes/: head.html  header.html
_layouts/: main.html
_sass/: main.scss  something.scss
archive/: 20230706 github actions passing value between steps.yml  20230707 github actions python shell using multi-line steps outputs.yml  20230714 github actions chaining jobs.yml  20230714 github actions evaluating variable in py shell.yml  20230714 github actions gating steps flow.yml  20230717 github pass values between actions.yml  note.md  test-ghaction-expression.yml  test-py-raise-exception.yml
assets/scripts/: foo.js
docs/: 9 - Changelog.md  foochangelogbar.md
test-dir/: test-py.py  test.py  test.sh  testpy.py
(+12 files in other folders)
